# lab2-3-antlr4

./: .gitignore  CMakeLists.txt  README.md  SysyLex.g4  g4tocpp.sh  pom.xml  readme.md
.github/workflows/: cmake-single-platform.yml  maven.yml
src/main/java/: Main.java
src/main/java/com/example/lab2_3_antlr4/: Main.java
src/main/java/org/apache/shardingsphere/sql/parser/autogen/: Main.java
src/main/resources/: test.sql
